# learn_asio

./: .clang-format  .gitcommit  .gitignore  .gitmodules  CMakeLists.txt  Makefile.msc  README.md
.github/workflows/: ccpp.yml
asio-1.12.2/include/asio/: io_context.hpp  strand.hpp  system_executor.hpp
asio-1.12.2/include/asio/detail/: atomic_count.hpp  epoll_reactor.hpp  event.hpp  global.hpp  is_executor.hpp  scheduler.hpp  scheduler_operation.hpp  thread_info_base.hpp  tss_ptr.hpp
asio-1.12.2/include/asio/detail/impl/: epoll_reactor.hpp  epoll_reactor.ipp  scheduler.ipp  strand_executor_service.hpp
asio-1.12.2/include/asio/experimental/: co_spawn.hpp
asio-1.12.2/include/asio/impl/: execution_context.hpp  executor.hpp  system_executor.hpp
asio-1.12.2/include/asio/ip/: tcp.hpp
examples/: CMakeLists.txt
examples/cpp11/: CMakeLists.txt
examples/cpp11/chat/: CMakeLists.txt  chat_message.hpp
examples/cpp11/executors/: CMakeLists.txt  actor.cpp  fork_join.cpp  pipeline.cpp
examples/cpp11/http/server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
examples/cpp11/ssl/: CMakeLists.txt  client.cpp  server.cpp
examples/cpp11/timers/: CMakeLists.txt
examples/cpp14/echo/: CMakeLists.txt  async_tcp_echo_server.cpp
fmt_6_0_0/: CMakeLists.txt
http_parser/: CMakeLists.txt
model/: CMakeLists.txt  actor.qmodel  async_model.qmodel  async_model.qmodel.autosave  async_result.qmodel  strand.qmodel  thread_pool.qmodel
signal/: CMakeLists.txt  signal.cpp
src/: CMakeLists.txt  daytime1.cpp  daytime2.cpp  daytime3.cpp  daytime4.cpp  daytime5.cpp  daytime6.cpp  daytime7.cpp  log.hpp  signal.cpp  thread.cpp  timer1.cpp  timer2.cpp  timer3.cpp  timer4.cpp  timer5.cpp
src/basics/: daytime1.cpp  daytime2.cpp  daytime3.cpp  daytime4.cpp  daytime5.cpp  daytime6.cpp  daytime7.cpp  thread.cpp  timer1.cpp  timer2.cpp  timer3.cpp  timer4.cpp  timer5.cpp
src/common/: CMakeLists.txt  log.hpp  macro.hpp  message.cpp  message.h  singleton.h
src/http_client/: main.cpp
src/http_server/: CMakeLists.txt  connection.cpp  connection.h  connection_manager.cpp  connection_manager.h  header.hpp  main.cpp  request.cpp  request.h  request_handler.cpp  request_handler.h  request_parser.cpp  request_parser.h  response.cpp  response.h  server.cpp  server.h
threads/: CMakeLists.txt  thread.cpp
tutorial/: 101.server.cpp  101.tcp_server.cpp  102.tcp_client.cpp  103.udp_server.cpp  104.udp_client.cpp  105.serial_port.cpp  105.signal.cpp  106.timers.cpp  107.async_tcp_server.cpp  108.streambuf.cpp  109.resolvers.cpp  110.http_client.cpp  111.event_polling.cpp  201.async_tcp_server.cpp  201.streambuf.cpp  202.async_tcp_server_streambuf.cpp  203.io_context_run_forever.cpp  204.post_custom_functions_to_io_context.cpp  205.multithread.cpp  206.strand.cpp  207.multithread_with_multiple_io_context.cpp  301.chat_server.cpp  CMakeLists.txt
tutorials/: daytime1.cpp  daytime2.cpp  daytime3.cpp  daytime4.cpp  daytime5.cpp  daytime6.cpp  daytime7.cpp  timer2.cpp  timer4.cpp
